# judge-agg-dynamics

./: .gitignore  Agenda.py  Agent.py  AgentFromModels.py  BeliefBase.py  Boolean.py  Graph.py  GraphFromModels.py  Person.py  README.md  __main__.py  matrices.py  pyproject.toml  requirements.txt
experiments/: experiment1.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  experiment6.py
src/: AgentFromModels.py  BeliefBase.py  Graph.py  GraphFromModels.py  MarkovChain.py  Matrices.py
src/jaggdy/: BeliefBase.py  Graph.py  MarkovChain.py
src/jaggdy/utils/: types.py  utils.py
tests/: test_belief_base.py  test_enums.py  test_graph.py  test_graph_from_models.py  test_markov_chain.py  test_utils.py
utils/: enums.py  types.py  utils.py
